<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:orientation="vertical"
                      android:gravity="center">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/enable_debug"/>

            <Switch android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/switch_debug"
                    tools:ignore="MissingConstraints"/>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edittext_cookie"
                        android:hint="@string/cookie"
                        android:enabled="false"
                        android:ems="10"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_cookie"
                        android:text="@string/copy"/>

            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edittext_signature"
                        android:hint="@string/signature"
                        android:enabled="false"
                        android:ems="10"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_signature"
                        android:text="@string/copy"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_hpv_type"
                    android:entries="@array/spinner_hpv_type"/>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:gravity="center">

                <!--                <androidx.appcompat.widget.AppCompatEditText-->
                <!--                        android:layout_width="wrap_content"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:id="@+id/edittext_pid"-->
                <!--                        android:inputType="number"-->
                <!--                        android:hint="@string/pid"-->
                <!--                        android:ems="5"/>-->

                <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edittext_hospital_id"
                        android:inputType="number"
                        android:hint="@string/hospital_id"
                        android:ems="5"/>

            </LinearLayout>


            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:gravity="center">

                <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edittext_date"
                        android:inputType="date"
                        android:hint="@string/date"
                        android:ems="10"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_clear"
                        android:text="@string/clear"/>

            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:gravity="center">

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_get_user"
                        android:text="@string/get_user"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_start_seckill"
                        android:text="@string/start_seckill"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_start_seckill_all_month"
                        android:enabled="false"
                        android:visibility="gone"
                        android:text="@string/start_seckill_all_month"/>

            </LinearLayout>

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_upload_cookie"
                    android:text="@string/upload_cookie"
                    android:enabled="false"
                    android:visibility="gone"/>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>